--- a/style.css
+++ b/style.css
@@ -4,6 +4,12 @@
     box-sizing: border-box;
     font-family: 'Times New Roman', Times, serif;
 }
+ul{
+    font-size: 2rem;
+    font-weight: bold;
+
+    
+}
 
 input, select{
     height: 2rem;
@@ -11,4 +17,7 @@ input, select{
 #button{
     width: 10rem;
     background-color: aqua;
+}
+#container{
+    background-color: #e4fbfb;
 }
