--- a/style.css
+++ b/style.css
@@ -6,17 +6,17 @@
 }
 ul{
     font-size: 2rem;
-    font-weight: 900;
-
-    
+    font-weight: 900;  
 }
-
+#formulario{
+    background-image: url(./imagenes/citrus-fruit_nz6luj.webp);
+}
 input, select{
     height: 2rem;
 }
 #button{
     width: 10rem;
-    background-color: aqua;
+    background-color: #0ed2c5;
 }
 #container{
     background-color: #e4fbfb;
